--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.*",
-        "fzaninotto/faker": "1.3.*"
+        "illuminate/support": "4.1.*"
     },
     "autoload": {
         "psr-0": {
