--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "illuminate/support": "4.1.*"
+        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": {
             "AdamWathan\\Facktory": "src/"
-        },
-        "files": [
-            "../../../app/tests/factories.php"
-        ]
+        }
     },
     "minimum-stability": "stable"
 }
