--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "adamwathan/facktory",
-    "description": "An attempt at bring the wonders of Ruby's FactoryGirl to PHP",
+    "description": "An attempt at bringing the wonders of Ruby's FactoryGirl to PHP",
     "authors": [
         {
             "name": "Adam Wathan",
