--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "illuminate/database": "4.*"
+        "illuminate/database": "4.*",
+        "mockery/mockery": "0.9.*"
     },
     "autoload": {
         "psr-0": {
