Switch namespace over to Vehikl

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "mockery/mockery": "0.9.*"
     },
     "autoload": {
-        "psr-0": {
-            "AdamWathan\\Facktory": "src/"
+        "psr-4": {
+            "Vehikl\\Facktory\\": "src/"
         },
         "classmap": [
             "tests/FunctionalTestCase.php"
