--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "adamwathan/facktory",
+    "name": "vehikl/facktory",
     "description": "An attempt at bringing the wonders of Ruby's FactoryGirl to PHP",
     "authors": [
         {
