--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
 
-after_script: ./codeclimate.sh
+after_script: php vendor/bin/coveralls
 
 script: phpunit
